opam-version: "2.0"
name: "JWTo"
synopsis: "JWT encoding, decoding and verification"
version: "0.1.4"
authors: "Sebastian Porto"
maintainer: "Sebastian Porto <s@porto5.com>"
license: "MIT"
homepage: "https://github.com/sporto/jwto"
bug-reports: "https://github.com/sporto/jwto"
dev-repo: "git://github.com/sporto/jwto"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.05"}
  "dune" {build}
  "alcotest" {with-test}
  "cryptokit"
  "yojson"
  "base64"
  "re"
  "ppx_deriving"
]

