opam-version: "2.0"
name: "JWTo"
version: "0.3.0"
authors: "Sebastian Porto"
maintainer: "Sebastian Porto <s@porto5.com>"
license: "MIT"
homepage: "https://github.com/sporto/jwto"
bug-reports: "https://github.com/sporto/jwto"
dev-repo: "git://github.com/sporto/jwto"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.05"}
  "dune" {build}
  "alcotest" {with-test}
  "cryptokit" {>= "1.10"}
  "fmt" {>= "0.8"}
  "yojson" {>= "1.6"}
  "base64" {>= "3.1"}
  "re" {>= "1.8"}
  "ppx_deriving" {>= "4.2"}
]

synopsis: "JWT encoding, decoding and verification"
description: "JWT encoding, decoding and verification"